fix gap style css

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 50px;
   margin: 50px 0 50px;
 }
 
